schemas: fix path on local gschema
To follow modern conventions where paths should not start with /system/

--- a/schemas/org.gnome.system.locale.gschema.xml.in
+++ b/schemas/org.gnome.system.locale.gschema.xml.in
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <schemalist gettext-domain="gsettings-desktop-schemas">
-  <schema id="org.gnome.system.locale" path="/system/locale/">
+  <schema id="org.gnome.system.locale" path="/org/gnome/system/locale/">
     <key name="region" type="s">
       <default>''</default>
       <summary>The locale to use for dates / numbers formats</summary>
